# rust-space-worm-game-wasm

./: Cargo.toml  README.md  _headers  index.html  start-game.sh
.claude/commands/: refactor-for-wasm.md
.github/workflows/: deploy.yml
assets/audio/Space Worm Project/: Space Worm.als
assets/audio/Space Worm Project/Ableton Project Info/: Project8_1.cfg
assets/audio/Space Worm Project/Backup/: Space Worm [2025-07-13 123853].als  Space Worm [2025-07-13 124840].als
assets/audio/Space Worm Project/Samples/Processed/Reverse/: Tom Syn T1 1 R.wav.asd  Vox Inhale R.wav.asd  Wood MPC 2 R.wav.asd
assets/sprites/: background.aseprite  body.aseprite  food.aseprite  game_over.aseprite  head.aseprite  perks.aseprite  powerup_grid.aseprite  powerups.aseprite  tail.aseprite
scripts/: audio.sh  build-desktop.sh  build-wasm.sh  deploy.sh  serve.py  serve.sh
src/: lib.rs  main.rs
src/audio/: manager.rs  mod.rs  platform_manager.rs
src/graphics/: mod.rs  render.rs  sprites.rs  text.rs  update.rs
src/input/: handler.rs
src/platform/: mod.rs  web.rs
src/state/: constants.rs  loop.rs  mod.rs  platform_types.rs  structs.rs
src/state/core/: background.rs  bounds.rs  collision.rs  food.rs  mod.rs  movement.rs  perks.rs  snake.rs  termination.rs  tick.rs
www/: index.html
www/assets/sprites/: blue_strip.aseprite  food.aseprite  loot_crate.aseprite
